fix button + spacing

--- a/weym/src/components/components.css
+++ b/weym/src/components/components.css
@@ -174,7 +174,7 @@
 
   .findRidersButton {
     border: 3px solid rgba(111, 209, 123, 0.575);
-    padding: 10px 25px;
+    padding: 10px 10px;
     margin-top: 20px;
     border-radius: 10px;
     text-align: center;
